My website added

--- a/CssCheetSheet/index.css
+++ b/CssCheetSheet/index.css
@@ -3,4 +3,5 @@ body {
   color: blueviolet;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 25px;
+  margin: 0;
 }
